2011-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/__init__.py: Added support for a direct link to Flickr.

2011-07-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4 release.

2011-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base/ui.py, flickr/authdialog.py: Fixed a bug.

2011-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/EXIF.py (olympus_special_mode): Fixed an Olympus maker
	  note error.

2011-06-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4-rc1 release.
	* it.po: Updated Italian translation.  Thanks Cristian Marchi!

2011-06-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, history.py: Fixed url escaping in SQL (issue #94).
	* utils/sqldb.py: Added debug messages for SQL.
	* help/C/gphotoframe.xml: Updated a help documentation.  
	  Thanks Cristian Marchi!

2011-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/: Updated help images.  Thanks Cristian Marchi!

2011-06-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py (RecentQueue.clear_cache): Improved obsolete cache
	  files removing.

2011-06-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/EXIF.py (EXIF_header.decode_maker_note): Fixed a Canon
	  maker note error.

2011-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Improved obsolete cache thumbnails removing.

2011-06-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.xcf: Updated a help image.

2011-05-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4-b2 release.
	* liststore.py (RecentQueue.pop): Improved obsolete cache files
	  removing.

2011-05-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/__init__.py: Fixed a bug.

2011-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4-b1 release.

2011-05-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/folder.py, gphotoframe.ui: Added new option for 'Exclude
	  hidden files and folders'.

2011-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
